# pirg

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: publish-to-test-pypi.yml  pytest.yml  qodana_code_quality.yml
pirc/: models.py  pirc.py
pirg/: config.py  custom_exceptions.py  models.py  pirg.py  utils.py
pric/: pric.py
src/pirg/: __init__.py  config.py  exceptions.py  models.py  pirg.py  utils.py
src/test/: test_commands.py  test_utils.py
test/: test_commands.py  test_pirc.py  test_pirg.py  test_utils.py
